--- a/Hanumanchalisa.html
+++ b/Hanumanchalisa.html
@@ -9,11 +9,9 @@
 </head>
 
 <body>
-    <br>
     <div class="head">
         <h1><b><Big><i>जय श्री राम</i></Big></b></h1>
     </div>
-    <br>
     <hr>
     <div class="head2"><big><b><i>
                     <h2>श्री हनुमान चालीसा</h2>
@@ -26,6 +24,7 @@
         </a>
     </div>
     <hr>
+    <div class="doohaa">
     <h3><b>
             <p><big>--------- दोहा ---------</big></p>
         </b></h3>
@@ -40,10 +39,15 @@
  बल बुधि बिद्या देहु मोहिं
  हरहु कलेश बिकार ॥</b></big></p></pre>
     </div>
+    </div>
+    <hr>
+    <div class="chorpahie">
     <h4><b>
+        <big>
             <p>---------- चौपाई ----------</p>
+        </big>
         </b></h4>
-    <pre><big> जय हनुमान ज्ञान-गुण-सागर ।
+    <pre> जय हनुमान ज्ञान-गुण-सागर ।
  जय कपीश तिहुँ लोक उजागर ॥ १ ॥
 
  राम-दूत अतुलित-बल-धामा ।
@@ -162,21 +166,23 @@
 
  तुलसीदास सदा हरि-चेरा ।
  कीजै नाथ हृदय महँ डेरा ॥ ४० ॥
-</big></pre>
+</pre>
+    </div>
     <hr>
+    <div class="doha">
     <h4><b>
             <p><big>----------- दोहा -----------</big></p>
         </b></h4>
-    <pre><big><b><p> पवनतनय संकट-हरन,
+    <pre><b><p> पवनतनय संकट-हरन,
  मंगल-मूरति-रूप ।
  राम लखन सीता सहित,
  हृदय बसहु सुर-भूप ॥
     
  सियावर रामचंद्र की जय ।
  पवनसुत हनुमान की जय ।
-    </p></b></big></pre>
+    </p></b></pre>
+    </div>
     <hr>
-    <br>
 </body>
 <!-- <li><a href="www.example.com">website</a></li>
 <li><a href="mailto:thnkuayush567@gmail.com">mail</a></li>
